@@ -14,7 +14,7 @@ then
 fi
 
 db_get debian-installer/serial-console
-if [ "$RET" = "no" ] ; then
+if [ "$RET" = "false" ] ; then
 	apt-install console-tools console-data console-common 
 	chroot /target install-keymap $KEYMAP
 fi
