@@ -16,7 +16,7 @@ Description: For internal use (keyboard chosen by user)
 
 Template: debian-installer/serial-console
 Type: boolean
-Default: no
+Default: false
 Description: For internal use (Is a serial console in use?)
 
 Template: kbd-chooser/no-keyboard
